--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
-bind s split-window -v
-bind v split-window -h
+bind-key s split-window -c "#{pane_current_path}"
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
 
 bind-key -n M-h select-pane -L
 bind-key -n M-j select-pane -D
@@ -10,3 +11,5 @@ bind-key -n M-H resize-pane -L 7
 bind-key -n M-J resize-pane -D 7
 bind-key -n M-K resize-pane -U 7
 bind-key -n M-L resize-pane -R 7
+
+set -s escape-time 0
