--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,3 +13,9 @@ bind-key -n M-K resize-pane -U 7
 bind-key -n M-L resize-pane -R 7
 
 set -s escape-time 0
+
+set-option -g mouse on
+set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
