--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,10 @@ bind-key -n M-L resize-pane -R 7
 set -s escape-time 0
 
 set-option -g mouse on
-set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+set -g default-terminal "screen-256color"
+
+setw -g mode-keys vi
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
