--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,7 @@ bind-key -n M-L resize-pane -R 7
 set -s escape-time 0
 
 set-option -g mouse on
+set-option -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
 
 setw -g mode-keys vi
