--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
       "webextensions": true
     },
     "globals": {
-      "angular": true
+      "angular": true,
+      "_": true,
+      "define": true
     }
 }
