--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,4 +22,5 @@ setw -g mode-keys vi
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
