--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,4 +23,6 @@ setw -g mode-keys vi
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 set-option -g default-command "reattach-to-user-namespace -l zsh"
-
+set-option -g allow-rename off
+set-window-option -g automatic-rename off
+setw -g mode-keys vi
